Use installed JDK with security manager support for Formatters$12 test